# foris-controller-foris-schema

./: .coveragerc  .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
foris_schema/: __init__.py  custom_format_checkers.py  validator.py
foris_schema/cli/: __init__.py  __main__.py
tests/: test_cli.py  test_custom_format_checkers.py  test_definitions.py  test_schemaerror.py  test_simple.py  test_verbose.py
tests/schemas/: simple.json
tests/schemas/definitions/override_definition/: override.json
tests/schemas/modules/custom_format_checkers/: custom_format_checkers.json
tests/schemas/modules/no_override_definition/: override.json
tests/schemas/modules/override_definition/: override.json
tests/schemas/modules/redefinition/redefinition1/: redefinition1.json
tests/schemas/modules/redefinition/redefinition2/: redefinition2.json
tests/schemas/modules/wrong_schema/invalid_json/: invalid.json
tests/schemas/wrong_schema/enum1/: enum1.json
tests/schemas/wrong_schema/enum2/: enum2.json
