[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foris-schema"
dynamic = ["version"]
description = "Library which validates whether the json matches the protocol use between Foris web and a configuration backend."
readme = "README.md"
license = "GPL-3.0"
authors = [
    { name = "CZ.NIC", email = "packaging@turris.cz" },
    { name = "z.s.p.o. (http://www.nic.cz/)" },
]
dependencies = [
    "jsonschema",
]

[project.scripts]
foris-schema = "foris_schema.cli.__main__:main"

[project.urls]
Homepage = "https://gitlab.nic.cz/turris/foris-controller/foris-schema"

[tool.hatch.version]
path = "foris_schema/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/foris_schema",
]
